syntax = "proto3";

option java_multiple_files = true;
option java_generic_services = true;
package com.example.learn;

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    int32 responseCode = 1;
    string message = 2;
}

service LoginService {
    rpc logIn (LoginRequest) returns (LoginResponse);
}